<resources>
    <string name="app_name">Fitness For Life</string>
    <string name="welcome_back">FITNESS FOR LIFE</string>
    <string name="login_subtitle">Journey To Make Better You</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="google_login">Google</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
</resources>